# George-Sphinx

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
src/: main.py
tests/: basic_test.py
